[tool.poetry]
name = "forward-bot"
version = "0.1.0"
description = ""
authors = ["Yest Izit <hi@dmitry.email>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b6"
sqlalchemy = "2.0.0b3"
aiohttp-healthcheck = "^1.3.1"
aiosqlite = "^0.17.0"
greenlet = "^2.0.1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = { extras = ["d"], version = "^22.10.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true